# autotools-boilerplate

./: Makefile.am  README.md  configure.ac
include/: Makefile.am
include/boilerplate/: boilerplate.h
lib/: Makefile.am  boilerplate.c
src/: Makefile.am  main.c
tests/: Makefile.am  test.c  test_fail.c
